--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Modal final -->
     <div id="finalModal" class="modal">
         <div class="modal-content">
-            <p>No esperaba menos, siempre las cosas son como yo quiero Jesi!</p>
+            <p>No esperaba menos, siempre las cosas son como yo quiero boludita de mierda</p>
             <button id="closeFinalModalBtn">Cerrar</button>
         </div>
     </div>
