--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Modal de confirmación -->
     <div id="confirmationModal" class="modal">
         <div class="modal-content">
-            <p>¿Estás segura? Mira que después de mí no hay más nada...</p>
+            <p>Tas segura pa?</p>
             <button id="confirmYesBtn">Sí, estoy segura</button>
         </div>
     </div>
@@ -26,8 +26,8 @@
     <!-- Modal final -->
     <div id="finalModal" class="modal">
         <div class="modal-content">
-            <p>No esperaba menos, siempre las cosas son como yo quiero boludita de mierda</p>
-            <button id="closeFinalModalBtn">Cerrar</button>
+            <p>Era obvio, siempre las cosas son como yo quiero boludita de mierda</p>
+            <button id="closeFinalModalBtn">Chau</button>
         </div>
     </div>
 
